# num_cpus

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: cargo-clippy.yml  cargo-cross-build.yml  cargo-test-cross.yml  cargo-test-linux.yml  cargo-test-macos.yml  cargo-test-minimum-rust.yml  cargo-test-windows.yml  ci.yml  test-docker-cgroup.yml
examples/: values.rs
src/: lib.rs  linux.rs
