[package]

name = "num_cpus"
version = "1.11.0" # don't forget to update html_root_url
description = "Get the number of CPUs on a machine."
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/seanmonstar/num_cpus"
documentation = "https://docs.rs/num_cpus"
keywords = ["cpu", "cpus", "cores"]
categories = ["hardware-support"]
readme = "README.md"

[dependencies]
libc = "0.2.26"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os = "hermit"))'.dependencies]
hermit-abi = "0.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "~0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "~0.3"
features = [
    "Navigator",
    "Window"
]

[dev-dependencies]
doc-comment = "0.3"
