[package]

name = "num_cpus"
version = "1.14.0"
description = "Get the number of CPUs on a machine."
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanmonstar/num_cpus"
documentation = "https://docs.rs/num_cpus"
keywords = ["cpu", "cpus", "cores"]
categories = ["hardware-support"]
readme = "README.md"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.26"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os = "hermit"))'.dependencies]
hermit-abi = "0.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# This feature must be enabled only by top-level crate (cdylib) using wasm-bindgen on WebAssembly target.
# When enabled, it will tell `num_cpus` to retrieve real number of user cores from the browser via JavaScript.
# Any regular crates (leaf libraries) should continue use `num_cpus` as they normally would, and not touch this feature.
wasm-bindgen = { version = "0.2", optional = true }
